--- a/home.org
+++ b/home.org
@@ -78,11 +78,11 @@
   :END:
 
   This is for fixing ssh keys in macOS Sierra. Following [[https://github.com/jirsbek/SSH-keys-in-macOS-Sierra-keychain][this]] article.
-  #+BEGIN_SRC config
-Host *
-  AddKeysToAgent yes
-  UseKeychain yes
-  IdentityFile ~/.ssh/id_rsa
+  #+BEGIN_SRC conf
+    Host *
+      AddKeysToAgent yes
+      UseKeychain yes
+      IdentityFile ~/.ssh/id_rsa
   #+END_SRC
 
 * emacs
@@ -1238,4 +1238,56 @@ Host *
       fi
       ln -s "$file" "$target"
     done
+  #+END_SRC
+
+* tmux
+  #+BEGIN_SRC conf :tangle ~/.tmux.conf
+    # set Zsh as your default Tmux shell
+    set-option -g default-shell /usr/local/bin/zsh
+
+    # to fix pdcopy pdpaste in tmux
+    #set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
+
+    # Tmux should be pretty, we need 256 color for that
+    set -g default-terminal "screen-256color"
+
+
+    # Tmux uses a 'control key', let's set it to 'Ctrl-a'
+    # Reason: 'Ctrl-a' is easier to reach than 'Ctrl-b'
+    # set -g prefix C-a
+    # unbind C-b
+
+    # command delay? We don't want that, make it short
+    set -sg escape-time 1
+
+    # Set the numbering of windows to go from 1 instead
+    # of 0 - silly programmers :|
+    set-option -g base-index 1
+    setw -g pane-base-index 1
+
+
+    # Allow us to reload our Tmux configuration while
+    # using Tmux
+    bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+    # Getting interesting now, we use the vertical and horizontal
+    # symbols to split the screen
+    bind | split-window -h
+    bind - split-window -v
+
+    # use vi style navigation
+    setw -g mode-keys vi
+    set -g status-keys vi
+    bind-key -t vi-edit Up   history-up
+    bind-key -t vi-edit Down history-down
+
+    # Smart pane switching with awareness of vim splits
+    # See: https://github.com/christoomey/vim-tmux-navigator
+    is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+    bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+    bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+    bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+    bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+    bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
   #+END_SRC
