--- a/home.org
+++ b/home.org
@@ -975,6 +975,7 @@
 *** Basics
     #+BEGIN_SRC emacs-lisp
       (use-package org
+        :ensure org-plus-contrib
         :init
         (setq org-directory "~/io"
               org-log-into-drawer 1
